# 3D-render-C-

./: .gitignore  README.md
renderer/: CMakeLists.txt
renderer/include/: datatypes.hpp  renderer.hpp
renderer/src/: main.cpp  renderer.cpp
